--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "福利0元购",
+    "navigationBarTitleText": "福利零元购",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
